# FinAPI

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: crud.py  database.py  main.py  models.py  routes.py  schemas.py
app/migrations/: env.py
app/migrations/versions/: 5203bc9eff25_.py
app/tests/: conftest.py  test_api.py
