[project]
name = "FinAPI"
version = "0.1.0"
description = ""
authors = [
    {name = "Kelvich Bogdan", email = "kelvichrd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi>=0.119.0,<0.120.0",
    "sqlalchemy>=2.0.44,<3.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "alembic>=1.17.0,<2.0.0",
    "uvicorn>=0.38.0,<0.39.0"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.0"
black = "^24.10.0"
isort = "^5.13.2"
testcontainers = "^4.13.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

